--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat+Web:600' rel='stylesheet' type='text/css'>
       <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <title>Swift List App</title>
+    <title>Swift List Applet</title>
   </head>
   <body>
     <div id="container">
